fix(css): Adjust spacing on Showcase component
This commit fixes a spacing issue on the Showcase component.

- Added horizontal padding to the `.cards-container` to restore space on the sides.
- Added a `margin-bottom` to the `.cards-container` to ensure there is adequate space between the cards and the footer.

--- a/src/components/showcase/style/showcase.css
+++ b/src/components/showcase/style/showcase.css
@@ -19,6 +19,8 @@
     margin-top: 120px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 30px;
+    margin-bottom: 80px;
 }
 
 .showcase-intro {
